--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ body {
 
 .navbar-menu li{
     display: inline-block;
-    margin-bottom: 15%;
 }
 
 .navbar-menu li a{
@@ -52,20 +51,22 @@ body {
     flex-flow: row nowrap;
 }
 
-.themeModes{
+.buttonTheme{
     margin-right: 3px;
-    margin-bottom: 7.6%;
     text-decoration: none;
-    color:white;
+    color:black;
     border-radius: 14px;
     border: 10;
-    background: black;
+    background: white;
     border-color: black;    
+    outline: 0;
+}
+.buttonTheme:hover{
+    opacity: 0.6;
 }
 
 .callback{
-    margin-left: 5px;
-    margin-bottom: 7.6%;
+    margin-right: 12px;
     text-decoration: none;
     color:black;
 }
@@ -78,4 +79,5 @@ body {
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
+    color:black
 }
