--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -7,19 +7,22 @@ body {
     min-width: 320px;
     overflow-x: hidden;
     height: auto;
-    background: #090b0b;
+    background: rgb(31, 31, 31);
 }
 .navbar{
     width: 100%;
     height: 70px;
     box-shadow: 0 4px 10px rgba(0,0,0, .1);
+    border-radius: 24px;
 }
 
 .navbar .container{
+    background-color: #11100f;
     height: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 24px;
 }
 
 .navbar-menu{
@@ -54,19 +57,20 @@ body {
 .buttonTheme{
     margin-right: 3px;
     text-decoration: none;
-    color:white;
+    color:rgb(255, 255, 255);
     border-radius: 14px;
     border: 10;
-    background: black;
-    border-color: white;    
+    background: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);    
     outline: 0;
+    font-size: 16px
 }
 .buttonTheme:hover{
     opacity: 0.6;
 }
 
 .callback{
-    margin-left: 12px;
+    margin-right: 12px;
     text-decoration: none;
     color:rgb(255, 255, 255);
 }
@@ -76,8 +80,9 @@ body {
 }
 
 .navbar-brand{
+    margin-left: 13px;
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
-    color:white;
+    color:rgb(255, 255, 255)
 }
