--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,16 @@ body {
     width: 100%;
     height: 70px;
     box-shadow: 0 4px 10px rgba(0,0,0, .1);
+    border-radius: 24px;
 }
 
 .navbar .container{
+    background-color:aliceblue;
     height: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 24px;
 }
 
 .navbar-menu{
@@ -57,9 +60,10 @@ body {
     color:black;
     border-radius: 14px;
     border: 10;
-    background: white;
+    background: aliceblue;
     border-color: black;    
     outline: 0;
+    font-size: 16px
 }
 .buttonTheme:hover{
     opacity: 0.6;
@@ -76,6 +80,7 @@ body {
 }
 
 .navbar-brand{
+    margin-left: 13px;
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
