--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,22 @@ body {
     text-decoration: none;
     color:black
 }
+
+/* Other css */
+
+.containerBox{
+    margin-left: 20px;
+    margin-top: 24px;
+}
+.emailInput{
+    width: 500px;
+    height: 50px;
+    font-size: 24px;
+    border-radius: 24px;
+    opacity: 0.6;
+}
+.emailInput:hover{
+    opacity: 1;
+}
+.custom-checkbox{
+    border-radius: 24px;
