--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    transition: all .5s ease-in-out;
+}
 body {
     position: relative;
     font-family: "Noto Sans", sans-serif;
@@ -41,6 +44,7 @@ body {
     opacity: 0.6;
     text-decoration: none;
     padding: 17px;
+    transition: all .7s ease-in-out;
 }
 
 .navbar-menu li a:hover{
@@ -58,12 +62,14 @@ body {
     margin-right: 3px;
     text-decoration: none;
     color:black;
-    border-radius: 14px;
+    padding: 10px;
+    border-radius: 100px;
     border: 10;
     background: aliceblue;
     border-color: black;    
     outline: 0;
-    font-size: 16px
+    font-size: 16px;
+    transition: all .7s ease-in-out;
 }
 .buttonTheme:hover{
     opacity: 0.6;
@@ -71,12 +77,17 @@ body {
 
 .callback{
     margin-right: 12px;
+    border-radius: 100px;
+    background-color: cornflowerblue;
+    padding: 10px;
     text-decoration: none;
     color:black;
+    transition: all .7s ease-in-out;
 }
 .callback:hover{
     text-decoration:overline;
-    color:cornflowerblue;
+    color:black;
+    background-color: gold;
 }
 
 .navbar-brand{
@@ -84,8 +95,13 @@ body {
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
-    color:black
+    color:black;
+    transition: all .7s ease-in-out;
 }
+.navbar-brand:hover{
+    color:cornflowerblue;
+}
+
 
 /* Other css */
 
@@ -99,10 +115,15 @@ body {
     font-size: 24px;
     border-radius: 24px;
     opacity: 0.6;
+    transition: all .7s ease-in-out;
 }
 .emailInput:hover{
     opacity: 1;
 }
-.custom-checkbox{
-    border-radius: 24px;
+.custom-a{
+    color:rgb(0, 0, 0);
+    transition: all .7s ease-in-out;
+}
+.custom-a:hover{
+color:rgb(228, 194, 0);
 }
