--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -51,6 +51,7 @@ body {
     transition: 1s;
     opacity: 1;
     text-decoration:overline;
+    transform: scale(1.1);
 }
 
 .navbar-wrap{
@@ -73,6 +74,7 @@ body {
 }
 .buttonTheme:hover{
     opacity: 0.6;
+    transform: scale(1.1);
 }
 
 .callback{
@@ -88,10 +90,11 @@ body {
     text-decoration:overline;
     color:black;
     background-color: gold;
+    transform: scale(1.1);
 }
 
 .navbar-brand{
-    margin-left: 13px;
+    margin-left: 10px;
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
@@ -100,6 +103,7 @@ body {
 }
 .navbar-brand:hover{
     color:cornflowerblue;
+    transform: scale(1.1);
 }
 
 /* Other css */
@@ -108,7 +112,12 @@ body {
     margin-left: 20px;
     margin-top: 24px;
 }
+.regLabel{
+    margin-top: 30%;
+    margin-left: 32%;
+}
 .emailInput{
+    margin-left: 32%;
     width: 500px;
     height: 50px;
     font-size: 24px;
@@ -118,6 +127,7 @@ body {
 }
 .emailInput:hover{
     opacity: 1;
+    transform: scale(1.1);
 }
 .custom-a{
     color:white;
@@ -125,4 +135,23 @@ body {
 }
 .custom-a:hover{
 color:gold;
+transform: scale(1.1);
+}
+.confirm-button{
+    background-color: black;
+    color: white;
+    opacity: 0.6;
+    padding: 10px;
+    border-radius: 100px;
+    font-size: 24px;
+    margin-left: 40%;
+    margin-top: 3%;
+    border-color: rgba(0,0,0, .1);
+    transition: all .7s ease-in-out;
+}
+.confirm-button:hover{
+    background-color: greenyellow;
+    color: #000;
+    opacity: 1;
+    transform: scale(1.1);
 }
