--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
 }
 
 .navbar-menu li a:hover{
+    transform: scale(1.1);
     transition: 1s;
     opacity: 1;
     text-decoration:overline;
@@ -91,7 +92,7 @@ body {
 }
 
 .navbar-brand{
-    margin-left: 13px;
+    margin-left: 10px;
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
@@ -109,7 +110,12 @@ body {
     margin-left: 20px;
     margin-top: 24px;
 }
+.regLabel{
+    margin-top: 30%;
+    margin-left: 32%;
+}
 .emailInput{
+    margin-left: 32%;
     width: 500px;
     height: 50px;
     font-size: 24px;
@@ -126,4 +132,23 @@ body {
 }
 .custom-a:hover{
 color:rgb(228, 194, 0);
+}
+
+.confirm-button{
+    background-color: black;
+    color: white;
+    opacity: 0.6;
+    padding: 10px;
+    border-radius: 100px;
+    font-size: 24px;
+    margin-left: 40%;
+    margin-top: 3%;
+    border-color: rgba(0,0,0, .1);
+    transition: all .7s ease-in-out;
+}
+.confirm-button:hover{
+    background-color: greenyellow;
+    color: #000;
+    opacity: 1;
+    transform: scale(1.1);
 }
