--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
 }
 .navbar-brand:hover{
     color:cornflowerblue;
+    transform: scale(1.1);
 }
 
 
@@ -125,6 +126,7 @@ body {
 }
 .emailInput:hover{
     opacity: 1;
+    transform: scale(1.1);
 }
 .custom-a{
     color:rgb(0, 0, 0);
