--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -73,7 +73,8 @@ body {
     transition: all .7s ease-in-out;
 }
 .buttonTheme:hover{
-    opacity: 0.6;
+    background-color: white;
+    color: black;
     transform: scale(1.1);
 }
 
@@ -150,7 +151,7 @@ transform: scale(1.1);
     transition: all .7s ease-in-out;
 }
 .confirm-button:hover{
-    background-color: greenyellow;
+    background-color: rgb(47, 130, 255);
     color: #000;
     opacity: 1;
     transform: scale(1.1);
