--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -173,3 +173,29 @@ transform: scale(1.1);
     opacity: 1;
     transform: scale(1.1);
 }
+.user-agreement{
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 2%;
+    width: 2000px;
+    font-weight: 16px;
+}
+.back{
+    width: 300px;
+    background-color: black;
+    color: white;
+    opacity: 0.6;
+    padding: 10px;
+    margin-left: 83%;
+    margin-bottom: 10%;
+    border-radius: 100px;
+    font-size: 24px;
+    border-color: rgba(0,0,0, .1);
+    transition: all .7s ease-in-out;
+}
+.back:hover{
+    background-color: gold;
+    color: #000;
+    opacity: 1;
+    transform: scale(1.1);
+}
