--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -49,7 +49,6 @@ body {
 
 .navbar-menu li a:hover{
     transform: scale(1.1);
-    transition: 1s;
     opacity: 1;
     text-decoration:overline;
 }
@@ -73,9 +72,10 @@ body {
     transition: all .7s ease-in-out;
 }
 .buttonTheme:hover{
-    background-color: black;
-    color: white;
+    opacity: 0.6;
     transform: scale(1.1);
+    background: black;
+    color: aliceblue;    
 }
 
 .callback{
@@ -103,8 +103,8 @@ body {
     transition: all .7s ease-in-out;
 }
 .navbar-brand:hover{
-    color:cornflowerblue;
     transform: scale(1.1);
+    color:cornflowerblue;
 }
 
 
@@ -128,8 +128,8 @@ body {
     transition: all .7s ease-in-out;
 }
 .emailInput:hover{
-    opacity: 1;
     transform: scale(1.1);
+    opacity: 1;
 }
 .custom-a{
     color:rgb(0, 0, 0);
@@ -152,7 +152,7 @@ color:rgb(228, 194, 0);
     transition: all .7s ease-in-out;
 }
 .confirm-button:hover{
-    background-color: rgb(47, 144, 255);
+    background-color: rgb(47, 137, 255);
     color: #000;
     opacity: 1;
     transform: scale(1.1);
