--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@ body {
     font-family: "Noto Sans", sans-serif;
     font-size: 16px;
     line-height: 1.4;
-    color: rgb(255, 255, 255);
+    color: #000;
     min-width: 320px;
     overflow-x: hidden;
     height: auto;
-    background: rgb(31, 31, 31);
+    background: white;
 }
 .navbar{
     width: 100%;
@@ -20,7 +20,7 @@ body {
 }
 
 .navbar .container{
-    background-color: #11100f;
+    background-color:aliceblue;
     height: inherit;
     display: flex;
     justify-content: space-between;
@@ -40,7 +40,7 @@ body {
 
 .navbar-menu li a{
     display: inline-block;
-    color: rgb(255, 255, 255);
+    color: #000;
     opacity: 0.6;
     text-decoration: none;
     padding: 17px;
@@ -48,10 +48,10 @@ body {
 }
 
 .navbar-menu li a:hover{
+    transform: scale(1.1);
     transition: 1s;
     opacity: 1;
     text-decoration:overline;
-    transform: scale(1.1);
 }
 
 .navbar-wrap{
@@ -62,20 +62,18 @@ body {
 .buttonTheme{
     margin-right: 3px;
     text-decoration: none;
-    color:rgb(255, 255, 255);
+    color:black;
     padding: 10px;
     border-radius: 100px;
     border: 10;
-    background: #11100f;
-    border-color: rgb(255, 255, 255);    
+    background: aliceblue;
+    border-color: black;    
     outline: 0;
     font-size: 16px;
     transition: all .7s ease-in-out;
 }
 .buttonTheme:hover{
-    background-color: white;
-    color: black;
-    transform: scale(1.1);
+    opacity: 0.6;
 }
 
 .callback{
@@ -84,14 +82,13 @@ body {
     background-color: cornflowerblue;
     padding: 10px;
     text-decoration: none;
-    color:rgb(255, 255, 255);
+    color:black;
     transition: all .7s ease-in-out;
 }
 .callback:hover{
     text-decoration:overline;
     color:black;
     background-color: gold;
-    transform: scale(1.1);
 }
 
 .navbar-brand{
@@ -99,13 +96,14 @@ body {
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
-    color:rgb(255, 255, 255);
+    color:black;
     transition: all .7s ease-in-out;
 }
 .navbar-brand:hover{
     color:cornflowerblue;
     transform: scale(1.1);
 }
+
 
 /* Other css */
 
@@ -131,13 +129,13 @@ body {
     transform: scale(1.1);
 }
 .custom-a{
-    color:white;
+    color:rgb(0, 0, 0);
     transition: all .7s ease-in-out;
 }
 .custom-a:hover{
-color:gold;
-transform: scale(1.1);
+color:rgb(228, 194, 0);
 }
+
 .confirm-button{
     background-color: black;
     color: white;
@@ -145,30 +143,13 @@ transform: scale(1.1);
     padding: 10px;
     border-radius: 100px;
     font-size: 24px;
-    margin-left: 36%;
+    margin-left: 40%;
     margin-top: 3%;
     border-color: rgba(0,0,0, .1);
     transition: all .7s ease-in-out;
 }
 .confirm-button:hover{
-    background-color: rgb(47, 130, 255);
-    color: #000;
-    opacity: 1;
-    transform: scale(1.1);
-}
-.login-button{
-    background-color: black;
-    color: white;
-    opacity: 0.6;
-    padding: 10px;
-    margin-left: 1%;
-    border-radius: 100px;
-    font-size: 24px;
-    border-color: rgba(0,0,0, .1);
-    transition: all .7s ease-in-out;
-}
-.login-button:hover{
-    background-color: gold;
+    background-color: greenyellow;
     color: #000;
     opacity: 1;
     transform: scale(1.1);
