--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -173,3 +173,20 @@ transform: scale(1.1);
     opacity: 1;
     transform: scale(1.1);
 }
+.clock {
+    margin-left: 36%;
+    margin-top: 10;
+    font-size: 36px;
+    background: #11100f;
+    border-color: rgb(255, 255, 255);  
+    padding: 10px;
+    border: 3;
+    width: 500px;
+    border-radius: 25px;
+    transition: all .7s ease-in-out;
+  }
+  .clock:hover{
+    background-color: white;
+    color: black;
+    transform: scale(1.1);
+  }
