--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -174,3 +174,20 @@ color:rgb(228, 194, 0);
     opacity: 1;
     transform: scale(1.1);
 }
+.clock {
+    margin-left: 36%;
+    margin-top: 10;
+    font-size: 36px;
+    background: aliceblue;
+    border-color: rgb(0, 0, 0);  
+    padding: 10px;
+    border: 3;
+    width: 500px;
+    border-radius: 25px;
+    transition: all .7s ease-in-out;
+  }
+  .clock:hover{
+    background-color: #11100f;
+    color: rgb(255, 255, 255);
+    transform: scale(1.1);
+  }
