--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -172,4 +172,44 @@ transform: scale(1.1);
     color: #000;
     opacity: 1;
     transform: scale(1.1);
+
 }
+.clock {
+    margin-left: 36%;
+    margin-top: 10;
+    font-size: 36px;
+    background: #11100f;
+    border-color: rgb(255, 255, 255);  
+    padding: 10px;
+    border: 3;
+    width: 500px;
+    border-radius: 25px;
+    transition: all .7s ease-in-out;
+  }
+  .clock:hover{
+    background-color: white;
+    color: black;
+    transform: scale(1.1);
+  }
+  .card{
+    width: 500px;
+    background-color: #11100f;
+    border-radius: 24px;
+    border: 3;
+    padding: 5px;
+    margin-top: 3%;
+    margin-left: 3%;
+    display: inline-block;
+  }
+  .cardTitle
+  {
+    font-size: 32px;
+    text-align: center;
+  }
+  .cardImage{
+    width: 500px;
+    border-radius: 24px;
+  }
+  .cardDescription{
+    text-align: center;
+  }
