--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -208,6 +208,7 @@ transform: scale(1.1);
   }
   .cardImage{
     width: 500px;
+    height: 300px;
     border-radius: 24px;
   }
   .cardDescription{
