--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -71,12 +71,16 @@ body {
     outline: 0;
     font-size: 16px;
     transition: all .7s ease-in-out;
+    /* Delete this parametr and uncomment hoover after fix!*/
+    opacity: 0.3;
 }
+/*
 .buttonTheme:hover{
     background-color: white;
     color: black;
     transform: scale(1.1);
 }
+*/
 
 .callback{
     margin-right: 12px;
