--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -11,6 +11,7 @@ body {
     overflow-x: hidden;
     height: auto;
     background: rgb(31, 31, 31);
+    font-family: system-ui;
 }
 .navbar{
     width: 100%;
@@ -226,7 +227,30 @@ transform: scale(1.1);
     box-shadow: 0 0 30px rgba(255,255,255,0.5);
 }
 
+.newsTitle{
+    font-size: 32px;
+    margin-left: 3%;
+    font-family: "Gill Sans", sans-serif;
+
+}
+.newsSubTitle{
+    font-size: 28px;
+    font-family: "Gill Sans", sans-serif;
+    margin-top: 5%;
+}
+.newsDecription{
+    font-size: 22px;
+    font-family: "Gill Sans", sans-serif;
+    margin-left: 3%;
+}
+.newsHR{
+    width: 1650px;
+    opacity: 0.5;
+}
   
+.newsMiniHR{
+    width: 1650px;
+    opacity: 0.2;
 
 
 
