--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -203,7 +203,7 @@ transform: scale(1.1);
     border: 3;
     padding: 5px;
     margin-top: 3%;
-    margin-left: 3%;
+    margin-left: 11%;
     display: inline-block;
     transition: all .7s ease-in-out;
   }
@@ -253,6 +253,52 @@ transform: scale(1.1);
     opacity: 0.2;
 }
 
+.pay-button{
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin-left: 1%;
+    border-radius: 100px;
+    font-size: 24px;
+    border-color: rgba(0,0,0, .1);
+    transition: all .7s ease-in-out;
+}
+.pay-button:hover{
+    background-color: greenyellow;
+    color: #000;
+    opacity: 1;
+    transform: scale(1.1);
 
-
-  
+}
+.check-list{
+    width: 800px;
+    background-color: #11100f;
+    border-radius: 24px;
+    margin-left: 25%;
+    border-radius: 24px;
+    border: 3;
+    padding: 5px;
+    transition: all .7s ease-in-out;
+    border-color: white;
+}
+.checkListDecription{
+    font-size: 22px;
+    font-family: "Gill Sans", sans-serif;
+    margin-left: 3%;
+}
+.checkListDecriptionItem{
+    font-size: 22px;
+    font-family: "Gill Sans", sans-serif;
+    margin-left: 3%;
+    color:white;
+    text-decoration: dotted;
+    
+}
+.checkListDecriptionItem:hover{
+    transform: scale(1.1);
+    color:greenyellow;
+}
+.user-agreement{
+    margin-left: 3%;
+    width: 1500px;
+}
