--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -276,7 +276,7 @@ transform: scale(1.1);
     border-radius: 24px;
     margin-left: 25%;
     border-radius: 24px;
-    border: 3;
+    border: 3px;
     padding: 5px;
     transition: all .7s ease-in-out;
     border-color: white;
@@ -292,11 +292,11 @@ transform: scale(1.1);
     margin-left: 3%;
     color:white;
     text-decoration: dotted;
-    
 }
 .checkListDecriptionItem:hover{
     transform: scale(1.1);
     color:greenyellow;
+    
 }
 .user-agreement{
     margin-left: 3%;
