--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,312 +1,151 @@
-*{
-    transition: all .5s ease-in-out;
-}
-body {
-    position: relative;
-    font-family: "Noto Sans", sans-serif;
-    font-size: 16px;
-    line-height: 1.4;
-    color: rgb(255, 255, 255);
-    min-width: 320px;
-    overflow-x: hidden;
-    height: auto;
-    background: rgb(31, 31, 31);
-    font-family: system-ui;
-}
-.navbar{
-    width: 100%;
-    height: 70px;
-    box-shadow: 0 4px 10px rgba(0,0,0, .1);
-    border-radius: 24px;
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&dispaly=swap');
 
-.navbar .container{
-    background-color: #11100f;
-    height: inherit;
+* 
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+}
+body 
+{
+    min-height: 100vh;
+    overflow-x: hidden;
+    background: linear-gradient(#2b1055,#7597de);
+}
+::-webkit-scrollbar
+{
+    width: 20px;
+}
+::-webkit-scrollbar-track
+{
+    background: #1c0522;
+}
+::-webkit-scrollbar-thumb
+{
+    background: #fff;
+    border-radius: 40px;
+}
+header 
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 24px;
+    z-index: 1000;
 }
-
-.navbar-menu{
-    list-style-type: none;
-    padding-left: 0;
-    margin-bottom: 0;
-}
-
-.navbar-menu li{
-    display: inline-block;
-}
-
-.navbar-menu li a{
-    display: inline-block;
-    color: rgb(255, 255, 255);
-    opacity: 0.6;
-    text-decoration: none;
-    padding: 17px;
-    transition: all .7s ease-in-out;
-}
-
-.navbar-menu li a:hover{
-    transition: 1s;
-    opacity: 1;
-    text-decoration:overline;
-    transform: scale(1.1);
-}
-
-.navbar-wrap{
-    display: flex;
-    flex-flow: row nowrap;
-}
-
-.buttonTheme{
-    margin-right: 3px;
-    text-decoration: none;
-    color:rgb(255, 255, 255);
-    padding: 10px;
-    border-radius: 100px;
-    border: 10;
-    background: #11100f;
-    border-color: rgb(255, 255, 255);    
-    outline: 0;
-    font-size: 16px;
-    transition: all .7s ease-in-out;
-    /* Delete this parametr and uncomment hoover after fix!*/
-    opacity: 0.3;
-}
-/*
-.buttonTheme:hover{
-    background-color: white;
-    color: black;
-    transform: scale(1.1);
-}
-*/
-
-.callback{
-    margin-right: 12px;
-    border-radius: 100px;
-    background-color: cornflowerblue;
-    padding: 10px;
-    text-decoration: none;
-    color:rgb(255, 255, 255);
-    transition: all .7s ease-in-out;
-}
-.callback:hover{
-    text-decoration:overline;
-    color:black;
-    background-color: gold;
-    transform: scale(1.1);
-}
-
-.navbar-brand{
-    margin-left: 10px;
+header .logo 
+{
+    color: #fff;
     font-weight: 700;
-    font-size: 26px;
     text-decoration: none;
-    color:rgb(255, 255, 255);
-    transition: all .7s ease-in-out;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
-.navbar-brand:hover{
-    color:cornflowerblue;
-    transform: scale(1.1);
+header ul 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-/* Other css */
-
-.containerBox{
+header ul li 
+{
+    list-style: none;
     margin-left: 20px;
-    margin-top: 24px;
 }
-.regLabel{
-    margin-top: 30%;
-    margin-left: 32%;
+header ul li a 
+{
+    text-decoration: none;
+    padding: 6px 15px;
+    color: #fff;
+    border-radius: 20px;
 }
-.emailInput{
-    margin-left: 32%;
-    width: 500px;
-    height: 50px;
-    font-size: 24px;
-    border-radius: 24px;
-    opacity: 0.6;
-    transition: all .7s ease-in-out;
+header ul li a:hover ,
+header ul li a.active 
+{
+    background: #fff;
+    color: #2b1055;
 }
-.emailInput:hover{
-    opacity: 1;
-    transform: scale(1.1);
+section 
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
-.custom-a{
-    color:white;
-    transition: all .7s ease-in-out;
+section::before
+{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522, transparent);
+    z-index: 1000;
 }
-.custom-a:hover{
-color:gold;
-transform: scale(1.1);
+section img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
 }
-.confirm-button{
-    background-color: black;
-    color: white;
-    opacity: 0.6;
-    padding: 10px;
-    border-radius: 100px;
-    font-size: 24px;
-    margin-left: 36%;
-    margin-top: 3%;
-    border-color: rgba(0,0,0, .1);
-    transition: all .7s ease-in-out;
+section img#moon
+{
+    mix-blend-mode: screen;
 }
-.confirm-button:hover{
-    background-color: rgb(47, 130, 255);
-    color: #000;
-    opacity: 1;
-    transform: scale(1.1);
+section img#mountains_front
+{
+    z-index: 10;
 }
-.login-button{
-    background-color: black;
-    color: white;
-    opacity: 0.6;
-    padding: 10px;
-    margin-left: 1%;
-    border-radius: 100px;
-    font-size: 24px;
-    border-color: rgba(0,0,0, .1);
-    transition: all .7s ease-in-out;
+#text
+{
+    position: absolute;
+    right: -350px;
+    color:#fff;
+    white-space: nowrap;
+    font-size: 7.5vmax;
+    z-index: 9;
 }
-.login-button:hover{
-    background-color: gold;
-    color: #000;
-    opacity: 1;
-    transform: scale(1.1);
-
-}
-.clock {
-    margin-left: 36%;
-    margin-top: 10;
-    font-size: 36px;
-    background: #11100f;
-    border-color: rgb(255, 255, 255);  
-    padding: 10px;
-    border: 3;
-    width: 500px;
-    border-radius: 25px;
-    transition: all .7s ease-in-out;
-  }
-  .clock:hover{
-    background-color: white;
-    color: black;
-    transform: scale(1.1);
-  }
-  .card{
-    width: 500px;
-    background-color: #11100f;
-    border-radius: 24px;
-    border: 3;
-    padding: 5px;
-    margin-top: 3%;
-    margin-left: 12%;
+#btn
+{
+    text-decoration: none;
     display: inline-block;
-    transition: all .7s ease-in-out;
-  }
-  .cardTitle
-  {
-    font-size: 32px;
-    text-align: center;
-  }
-  .cardImage{
-    width: 500px;
-    height: 300px;
-    border-radius: 24px;
-  }
-  .cardDescription{
-    text-align: center;
-  }
-
-  .card:hover{
-    transform: scale(1.1);
-    background-color:#3f3f3f;
-    box-shadow: 0 0 30px rgba(255,255,255,0.5);
+    padding: 8px 30px;
+    border-radius: 40px;
+    background: #fff;
+    color: #2b1055;
+    font-size: 1.5em;
+    z-index: 0;
+    transform: translateY(100px);
 }
-
-.newsTitle{
-    font-size: 32px;
-    margin-left: 3%;
-    font-family: "Gill Sans", sans-serif;
-
+.sec
+{
+    position: relative;
+    padding: 100px;
+    background: #1c0522;
 }
-.newsSubTitle{
-    font-size: 28px;
-    font-family: "Gill Sans", sans-serif;
-    margin-top: 5%;
+.sec h2 
+{
+    font-size: 3.5em;
+    margin-bottom: 10px;
+    color: #fff;
 }
-.newsDecription{
-    font-size: 22px;
-    font-family: "Gill Sans", sans-serif;
-    margin-left: 3%;
-}
-.newsHR{
-    width: 1650px;
-    opacity: 0.5;
-}
-  
-.newsMiniHR{
-    width: 1650px;
-    opacity: 0.2;
-}
-
-.pay-button{
-    background-color: black;
-    color: white;
-    padding: 10px;
-    margin-left: 1%;
-    border-radius: 100px;
-    font-size: 24px;
-    border-color: rgba(0,0,0, .1);
-    transition: all .7s ease-in-out;
-}
-.pay-button:hover{
-    background-color: greenyellow;
-    color: #000;
-    opacity: 1;
-    transform: scale(1.1);
-
-}
-.check-list{
-    width: 800px;
-    background-color: #11100f;
-    border-radius: 24px;
-    margin-left: 27.6%;
-    border-radius: 24px;
-    border: 3px;
-    padding: 5px;
-    transition: all .7s ease-in-out;
-    border-color: white;
-    transition: all .7s ease-in-out;
-}
-.checkListDecription{
-    font-size: 22px;
-    font-family: "Gill Sans", sans-serif;
-    margin-left: 3%;
-    transition: all .7s ease-in-out;
-}
-.checkListDecriptionItem{
-    font-size: 22px;
-    font-family: "Gill Sans", sans-serif;
-    margin-left: 5%;
-    color:white;
-    text-decoration: dotted;
-    transition: all .9s ease-in-out;
-    text-align: left;
-
-}
-.checkListDecriptionItem:hover{
-    transform: scale(1.1);
-    color:greenyellow;
-    margin-left: 39%;
-
-}
-.user-agreement{
-    margin-left: 3%;
-    width: 1500px;
-    margin-bottom: 3%;
-    transition: all .7s ease-in-out;
+.sec p
+{
+    font-size: 1em;
+    color: #fff;
 }
